<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/feedbackTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:hint="@string/enterTitle"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/feedbackContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:gravity="left|top"
        android:hint="@string/enterContent"
        android:imeOptions="actionDone"
        android:inputType="textLongMessage"
        android:minHeight="200dip"
        android:padding="5dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/feedbackCanel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/feedbackSendMail"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:text="@string/sendMail" />

    </LinearLayout>

</LinearLayout>