<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/feedbook"
            style="@style/setting_title_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/seletor_setting_top_bg"
            android:clickable="true"
            android:gravity="center_vertical|left"
            android:padding="8dip"
            android:text="@string/feedback" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/aboutUs"
            style="@style/setting_title_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/seletor_setting_center_bg"
            android:clickable="true"
            android:gravity="center_vertical|left"
            android:padding="8dip"
            android:text="@string/aboutShopping" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setViewPagerChangeMode"
            style="@style/setting_title_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/seletor_setting_center_bg"
            android:clickable="true"
            android:gravity="center_vertical|left"
            android:padding="8dip"
            android:text="@string/setViewpagerChageMode" >
        </TextView>
    </LinearLayout>
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txUseOrder"
            style="@style/setting_title_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/seletor_setting_center_bg"
            android:clickable="true"
            android:gravity="center_vertical|left"
            android:padding="8dip"
            android:text="@string/splash" >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/clearImageCache"
            style="@style/setting_title_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/seletor_setting_down_bg"
            android:clickable="true"
            android:gravity="center_vertical|left"
            android:padding="8dip"
            android:text="@string/clearImageCache" >
        </TextView>
    </LinearLayout>

</LinearLayout>